Fix navbar blue flicker

--- a/rundeckapp/grails-spa/packages/ui-trellis/theme-next/scss/paper/_view.scss
+++ b/rundeckapp/grails-spa/packages/ui-trellis/theme-next/scss/paper/_view.scss
@@ -23,6 +23,7 @@
 
 #section-navbar {
     overflow: hidden;
+    background-color: $black-background-color;
 }
 
 #section-content {
